# veebot-discord

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  heroku.yml  install-deps.sh
veebot/: Cargo.toml
veebot-cmd/: Cargo.toml
veebot-cmd/src/: lib.rs
veebot/src/: audio_queue.rs  derpibooru.rs  di.rs  error.rs  gelbooru.rs  lib.rs  main.rs  util.rs  yt.rs
veebot/src/commands/: audio.rs  image.rs  mod.rs
veebot/src/commands/image/: gif_generation.rs  mod.rs  texture_synthesis.rs
