[package]
name = "veebot"
version = "0.1.0"
authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2018"
publish = false
autobins = true

[dependencies.serenity]
version = "0.9.1"
features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "collector"
]

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "std"] }
hhmmss = "0.1.0"
iso8601 = "0.4.0"
simple-eyre = "0.3.0"
backtrace = "0.3.54"
nanoid = "0.3.0"
dotenv = "0.15.0"
envy = "0.4.1"
eyre = "0.6.2"
futures = "0.3.7"
itertools = "0.9.0"
once_cell = "1.4"
regex = "1.4"
reqwest = { version = "0.10.8", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
timeago = "0.2.1"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.13"
url = { version = "2.1", features = ["serde"] }

veebot-cmd = { path = "../veebot-cmd" }
