[package]
name = "veebot"
version = "0.1.0"
authors = ["Veetaha <veetaha2@gmail.com>"]
edition = "2018"
publish = false
autobins = true

[dependencies.serenity]
version = "0.9.1"
features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "collector"
]

[dependencies]
backtrace = "0.3.54"
chrono = { version = "0.4.19", features = ["serde", "std"] }
dotenv = "0.15.0"
envy = "0.4.1"
eyre = "0.6.3"
futures = "0.3.8"
hhmmss = "0.1.0"
iso8601 = "0.4.0"
itertools = "0.9.0"
nanoid = "0.3.0"
once_cell = "1.5"
rand = "0.7.3"
regex = "1.4"
reqwest = { version = "0.10.8", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0"
serde_json = "1.0"
simple-eyre = "0.3.0"
texture-synthesis = "0.8.0"
thiserror = "1.0"
timeago = "0.2.1"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.13"
url = { version = "2.2", features = ["serde"] }

veebot-cmd = { path = "../veebot-cmd" }
